--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx codeceptjs run"
+    "test": "npx codeceptjs run",
+    "test:report": "npx codeceptjs run --reporter xunit"
   },
   "keywords": [],
   "author": "",
